# apps/backend/spec/swagger.json
@@ -7,6 +7,26 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"UserProfile": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"id",
+					"name",
+					"email"
+				],
+				"type": "object",
+				"additionalProperties": true
+			},
 			"RegisterResponse": {
 				"properties": {
 					"uid": {
@@ -20,6 +40,15 @@
 					"bearerToken"
 				],
 				"type": "object"
+			},
+			"Partial_UserProfile_": {
+				"properties": {
+					"id": {},
+					"name": {},
+					"email": {}
+				},
+				"type": "object",
+				"description": "Make all properties in T optional"
 			},
 			"LoginResponse": {
 				"properties": {
@@ -57,6 +86,37 @@
 		"contact": {}
 	},
 	"paths": {
+		"/profile/{profileId}": {
+			"get": {
+				"operationId": "GetProfile",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/UserProfile"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"profile"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "profileId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/auth/register/email": {
 			"post": {
 				"operationId": "Register",
@@ -82,19 +142,26 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"properties": {
-									"password": {
-										"type": "string"
+								"allOf": [
+									{
+										"$ref": "#/components/schemas/Partial_UserProfile_"
 									},
-									"email": {
-										"type": "string"
+									{
+										"properties": {
+											"password": {
+												"type": "string"
+											},
+											"email": {
+												"type": "string"
+											}
+										},
+										"required": [
+											"password",
+											"email"
+										],
+										"type": "object"
 									}
-								},
-								"required": [
-									"password",
-									"email"
-								],
-								"type": "object"
+								]
 							}
 						}
 					}
